--- a/TECNO_CD8/recovery/root/twres/languages/ru.xml
+++ b/TECNO_CD8/recovery/root/twres/languages/ru.xml
@@ -62,10 +62,10 @@
 		<string name="files_btn">Файлы</string>
 		<string name="copy_log_btn">Копировать лог</string>
 		<string name="select_type_hdr">Выбор типа</string>
-		<string name="install_zip_hdr">Установка ZIP</string>
-		<string name="install_zip_btn">Установка ZIP</string>
-		<string name="install_image_hdr">Установка IMG-образа</string>
-		<string name="install_image_btn">Установка IMG</string>
+		<string name="install_zip_hdr">Запили ZIP</string>
+		<string name="install_zip_btn">Запилка ZIP</string>
+		<string name="install_image_hdr">Запилка IMG-образа</string>
+		<string name="install_image_btn">Запилка IMG</string>
 		<string name="install_select_file_hdr">Выбор файла</string>
 		<string name="file_selector_folders_hdr">Папки</string>
 		<string name="select_file_from_storage">Текущий накопитель: %tw_storage_display_name% (%tw_storage_free_size% МБ)</string>
